--- a/package.json
+++ b/package.json
@@ -69,7 +69,6 @@
     "source-map-js": "^1.0.2",
     "sucrase": "^3.32.0",
     "supports-preserve-symlinks-flag": "^1.0.0",
-    "tailwindcss": "^3.3.1",
     "thenify": "^3.3.1",
     "thenify-all": "^1.6.0",
     "to-regex-range": "^5.0.1",
@@ -78,11 +77,12 @@
     "wrappy": "^1.0.2",
     "yaml": "^1.10.2"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "tailwindcss": "^3.3.1"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "npx tailwindcss -i ./src/input.css -o ./dist/style.css --watch"
-    
   },
   "author": "",
   "license": "ISC"
